[options]
package_dir=
    =src
packages = lunch-py
install_requires =
    httpx
    tabula
    beautifulsoup4
    fastapi
    uvicorn

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
where=src  # . by default
include=lunch-py*  # * by default

[options.extras_require]
# For development tests/docs
dev =
    black
    isort>5.0
    pytest-cov
    mypy
    flake8 <= 3.9.2
    flake8-isort