[options]
package_dir=
    =src
packages = ral-lunch
install_requires =
    httpx
    tabula-py
    beautifulsoup4
    fastapi
    uvicorn
    pandas

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
where=src  # . by default
include=ral-lunch*  # * by default

[options.extras_require]
# For development tests/docs
dev =
    black
    isort>5.0
    pytest-cov
    mypy
    flake8 <= 3.9.2
    flake8-isort

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811,  # support typing.overload decorator